2007-12-09  Michael Olson  <mwolson@gnu.org>

	* erc-services.el (erc-nickserv-alist): Fix regexps for GRnet.

2007-12-09  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)

	* erc-backend.el, erc.el:
	Parse 275 (secure connection) responses.

	* erc-services.el: Add identification hooks for GRnet, the Greek
	IRC network <http://www.irc.gr>.

2007-12-08  David Kastrup  <dak@gnu.org>

	* erc-stamp.el (erc-echo-timestamp):
	* erc-lang.el (language):
	* erc-backend.el (erc-server-connect): Fix buggy call to `message'.

2007-12-07  Edward O'Connor  <ted@oconnor.cx>

	* erc-services.el: Provide a hook that runs when nickserv confirms
	that the user has successfully identified.
	(services, erc-nickserv-identify-mode): Add and remove
	erc-nickserv-identification-autodetect from
	erc-server-NOTICE-functions.
	(erc-nickserv-alist): Add SUCCESS-REGEXP to each entry.
	(erc-nickserv-alist-identified-regexp)
	(erc-nickserv-identification-autodetect): New functions.
	(erc-nickserv-identified-hook): New hook.

2007-12-06  D. Goel  <deego3@gmail.com>

	* erc-match.el (erc-add-entry-to-list): Fix buggy call to `error'.

2007-12-01  Glenn Morris  <rgm@gnu.org>

	* erc-backend.el (erc-server-send-ping): Move after definition of
	erc-server-send.

	* erc.el (iswitchb-temp-buflist, iswitchb-read-buffer)
	(erc-controls-strip): Declare for compiler.
	(erc-iswitchb): Don't require iswitchb when compiling.  Test
	iswitchb-mode is bound.

2007-11-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* erc.el (open-ssl-stream, open-tls-stream, erc-network-name):
	Declare as functions.

2007-11-29  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)

	* erc-backend.el, erc.el:
	Parse 307 (nick has identified) responses.

2007-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* erc.el (erc-open):
	* erc-backend.el (define-erc-response-handler):
	* erc-log.el (log):
	* erc-match.el (erc-log-matches): Fix typos in docstrings.

2007-11-11  Michael Olson  <mwolson@gnu.org>
